2006-06-14  Lillian Angel  <langel@redhat.com>

	* java/awt/Component.java
	(ignoreOldMouseEvents): New helper function.
	(translateEvent): Changed to be non-static and use new helper.
	* java/awt/TextComponent.java
	(ignoreOldMouseEvents): New helper function.

2006-06-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(MERGE_REGIONS): New constant flag.
	(commitBuffer): Exclude the merging of regions by default. This
	was causing painting artifacts in some applications, especially
	when different areas of the GUI are updated synchronously.

2006-06-14  Roman Kennke  <kennke@aicas.com>

	* examples/gnu/classpath/examples/awt/AicasGraphicsBenchmark.java:
	New file. This is a benchmark for AWT 1.1 style graphics operations.
	* examples/gnu/classpath/examples/awt/palme.gif: New file.
	* examples/gnu/classpath/examples/awt/aicas.gif: New file.

2006-06-14  Tom Tromey  <tromey@redhat.com>

	* java/io/File.java (getParent): Javadoc fix.

2006-06-14  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/loader/JarURLLoader.java (initialize): Skip our own
	jar.
	* gnu/java/net/IndexListParser.java (IndexListParser): Call clearAll
	when index entry does not exist.

2006-06-14  Tania Bento  <tbento@redhat.com>

	* javax/swing/AbstractButton.java
	(AbstractButton): Set focusable to false, not true.

2006-06-14  Tania Bento  <tbento@redhat.com>

	* javax/swing/JMenuItem.java
	(init): Changed horizontalAlignment from JButton.LEFT to JButton.LEADING.

2006-06-14  Tania Bento  <tbento@redhat.com>

	* javax/swing/JCheckBoxMenuItem.java
	(JCheckBoxMenuItem): Added check to set the selected state.

2006-06-14  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(cairoDrawLine): New native method.
	(cairoDrawRect): New native method.
	(cairoFillRect): New native method.
	(drawLine): Use special native method.
	(drawRect): Use special native method.
	(fillRect): Use special native method.